# ComfyUI_FaceDetectionNode

./: CLAUDE.md  README.md  __init__.py  comfyui-manager-entry.json  face_detection_node.py  node_list.json  pyproject.toml  requirements.txt
