[project]
name = "ComfyUI_FaceDetectionNode"
description = "A ComfyUI custom node for face detection and cropping using OpenCV Haar cascades, with full ComfyUI v3 schema support and backward compatibility."
version = "1.1.0"
license = {text = "Apache-2.0"}
dependencies = ["opencv-python>=4.5.0", "torch>=1.9.0", "torchvision>=0.10.0", "numpy>=1.21.0", "Pillow>=8.0.0"]

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUI_FaceDetectionNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Limbicnation"
DisplayName = "Face Detection Node"
Icon = ""
