[project]
name = "ComfyUI_FaceDetectionNode"
description = "H100-optimized face detection with Auto-Padding, Temporal Smoothing, Aspect Ratio Presets, and full batch processing for LTX-Video avatar pipelines. Backward compatible with v1.x workflows."
version = "2.1.3"
license = {text = "Apache-2.0"}
dependencies = ["opencv-python>=4.5.0", "torch>=2.0.0", "numpy>=1.21.0"]

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUI_FaceDetectionNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "limbicnation"
DisplayName = "Face Detection and Crop v2"
Icon = "https://raw.githubusercontent.com/Limbicnation/ComfyUI_FaceDetectionNode/main/icon.png"
